--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,14 @@
           <a class="nav-link" href="/add/">Add a Customer</a>
         </li>
       </ul>
+      <form class="form-inline my-2 my-lg-0" action="/search/" method="GET">
+        <input class="form-control mr-sm-2" 
+               type="search" 
+               placeholder="Search" 
+               name="search"
+               aria-label="Search">
+        <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
     </div>
   </nav>
 
