--- a/templates/customer_list.html
+++ b/templates/customer_list.html
@@ -5,7 +5,7 @@
   <a class="btn btn-primary" style="float: right" href="/add/">Add a Customer</a>
 
   <h1>{{ pageTitle }}</h1>
-
+  <!-- boolean instead -->
   {% if pageTitle !== "Best Customers by Number of Reservations" %}
   <ul style="column-count: 4">
     {% for customer in customers %}
